# copilot-speech

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  tsconfig.json  tsdown.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release-please.yml
artifacts/: helper-manifest.json  model-manifest.json
native/voice-helper/: CMakeLists.txt  README.md
native/voice-helper/src/: main.cpp
native/voice-helper/test/: protocol.cmake
scripts/: native-deps.ts  native.mjs  native.ts
src/: chat-delivery.ts  commands.ts  dictation-session.ts  format-duration.ts  helper-process.ts  helper-protocol.ts  index.ts  model-download.ts  silero-vad.ts  speech-daemon.ts  status-bar.ts  transcription-worker.ts  worker-protocol.ts  worker-speech-engine.ts
src/delivery/: chat.ts
src/extension/: commands.ts  status.ts
src/native/: CMakeLists.txt  protocol-test.cmake  voice-helper.cpp
src/native/voice-helper/: CMakeLists.txt
src/speech/: helper-supervisor.ts  protocol.ts  session.ts
test/: chat-delivery.test.ts  dictation-session.test.ts  format-duration.test.ts  helper-protocol.test.ts  model-download.test.ts  silero-vad.test.ts  transcription-session.test.ts  transcription-worker-device.test.ts  transcription-worker-unload.test.ts  worker-speech-engine-idle.test.ts
test/delivery/: chat.test.ts
test/speech/: model.test.ts  protocol.test.ts  session.test.ts
test/support/: vscode.ts
